# fayfee

./: Cargo.toml  README.md  env.example
metisai/: Cargo.toml
metisai/src/: json_structs.rs  lib.rs
newsapi/: Cargo.toml
newsapi/src/: json_structs.rs  lib.rs
src/: main.rs
telegramapi/: Cargo.toml
telegramapi/src/: json_structs.rs  lib.rs
