[package]
name = "gcli"
version = "0.1.0"
edition = "2021"

description = "ElAmir's first Rust app :)"
license = "MPL-2.0"
authors = ["ElAmir"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colour = "0.6.0"
newsapi = {path = "./newsapi"}
dotenv = "0.15.0"