[package]
name = "fayfee"
version = "0.1.0"
edition = "2021"

description = "Favorite feed generator"
license = "MPL-2.0"
authors = ["ElAmir"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
newsapi = {path = "./newsapi"}
metisai = {path = "./metisai"}
telegramapi = {path = "./telegramapi"}
dotenv = "0.15.0"
chrono = "0.4"